--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tqdm = "^4.66.1"
 torch = "2.0.0"
 torchvision = "0.15.1"
 dvc = {version = "3.26.2", extras = ["gdrive"]}
+hydra-core = "^1.3.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
