--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,14 @@ torch = "2.0.0"
 torchvision = "0.15.1"
 dvc = {version = "3.26.2", extras = ["gdrive"]}
 hydra-core = "^1.3.2"
+pytorch-lightning = "^2.1.0"
+mlflow = "^2.7.1"
+wandb = "^0.15.12"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
 Flake8-pyproject = "^1.2.3"
+ipykernel = "^6.25.2"
 
 [tool.black]
 line-length = 80
