--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ hydra-core = "^1.3.2"
 pytorch-lightning = "^2.1.0"
 mlflow = "^2.7.1"
 wandb = "^0.15.12"
+onnx = "1.15.0"
+onnxruntime = "1.16.3"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
