--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -45,6 +45,7 @@ loggers:
     save_dir: ./outputs/mlfolw_logs
     log_model: True
     tags: { exp_name: *exp_name }
+    image_path: ./img/sample.png
 
 artifacts:
   checkpoint:
@@ -59,3 +60,12 @@ artifacts:
 callbacks:
   model_summary:
     max_depth: 1
+
+triton:
+  model_name: "mnist_classifier"
+  server_url: "localhost:8500"
+  models_path: "triton/model_repository/mnist_classifier/1"
+
+test_triton:
+  test_num: 10
+  tolerance: 1e-5
