--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ mlflow = "^2.7.1"
 wandb = "^0.15.12"
 onnx = "1.15.0"
 onnxruntime = "1.16.3"
+tritonclient = {version = "^2.40.0", extras = ["http"]}
+fire = "^0.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
